# SugarLog

./: .gitignore  CMakeLists.txt  README.md  install.sh  sugarlog.pc
examples/: basic_usage.cpp
include/: async_logger.hpp  console_sink.hpp  file_sink.hpp  log_formatter.hpp  log_level.hpp  log_manager.hpp  log_sink.hpp  logger.hpp  sugarlog.hpp  thread_safe_queue.hpp
install_package/include/: async_logger.hpp  log_level.hpp  log_message.hpp  memory_pool.hpp  performance_monitor.hpp
src/: sugarlog.cpp
tests/: CMakeLists.txt  performance_test.cpp  test_log_level.cpp
